# human_mj_description

./: CMakeLists.txt  README.md  package.xml  setup.py
convex/: HeadLink-ch.txt  HipsLink-ch.txt  LAnkleLink-ch.txt  LArmLink-ch.txt  LElbowLink-ch.txt  LForearmLink-ch.txt  LHandLink-ch.txt  LHandOpen-ch.txt  LLegLink-ch.txt  LShinLink-ch.txt  LWrist-ch.txt  Lcube-ch.txt  RAnkleLink-ch.txt  RArmLink-ch.txt  RElbowLink-ch.txt  RForearmLink-ch.txt  RHandLink-ch.txt  RHandOpen-ch.txt  RLegLink-ch.txt  RShinLink-ch.txt  RWrist-ch.txt  TorsoLink-ch.txt  man-ch.txt
launch/: display.launch  display.rviz  display_human.launch
mc_mujoco/: human.in.yaml
meshes/: HeadLinkFull.dae  HipsLinkFull.dae  LAnkleLinkFull.dae  LAnkleLinkFull_2.dae  LArmLinkFull.dae  LBaby1stPhalange.dae  LBaby2ndPhalange.dae  LBaby3rdPhalange.dae  LElbowLink.dae  LForearmLink.dae  LHandLinkFull.dae  LHandOpen.dae  LIndex1stPhalange.dae  LIndex2ndPhalange.dae  LIndex3rdPhalange.dae  LLegLink.dae  LMiddle1stPhalange.dae  LMiddle2ndPhalange.dae  LMiddle3rdPhalange.dae  LRing1stPhalange.dae  LRing2ndPhalange.dae  LRing3rdPhalange.dae  LShinLink.dae  LThumb0thPhalange.dae  LThumb1stPhalange.dae  LThumb2ndPhalange.dae  LWrist.dae  Lcube.dae  RAnkleLinkFull.dae  RAnkleLinkFull_2.dae  RArmLinkFull.dae  RBaby1stPhalange.dae  RBaby2ndPhalange.dae  RBaby3rdPhalange.dae  RElbowLink.dae  RForearmLink.dae  RHandLinkFull.dae  RHandOpen.dae  RIndex1stPhalange.dae  RIndex2ndPhalange.dae  (+16 more)
rsdf/: LAnkleLink.rsdf  LHandLink.rsdf  LLegLink.rsdf  RAnkleLink.rsdf  RHandLink.rsdf  RLegLink.rsdf  TorsoLink.rsdf
(+66 files in other folders)
