cmake_minimum_required(VERSION 3.10)
project(human_description)

if(NOT TARGET mc_mujoco)
  find_package(mc_mujoco REQUIRED)
endif()

option(SRC_MODE "Use files in the repository instead of installed files" OFF)

set(HUMAN_XML_MODEL_PATH "xml/human.xml")
set(HUMAN_PDGAINS_PATH "pdgains/PDgains_sim.dat")

if(SRC_MODE)
  set(HUMAN_XML_MODEL_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${HUMAN_XML_MODEL_PATH}")
  set(HUMAN_PDGAINS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${HUMAN_PDGAINS_PATH}")
else()
  set(HUMAN_XML_MODEL_PATH "${MC_MUJOCO_SHARE_DESTINATION}/HUMAN/${HUMAN_XML_MODEL_PATH}")
  set(HUMAN_PDGAINS_PATH "${MC_MUJOCO_SHARE_DESTINATION}/HUMAN/${HUMAN_PDGAINS_PATH}")
endif()

configure_file(mc_mujoco/human.in.yaml "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/human.yaml")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/human.yaml" DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}")

install(DIRECTORY meshes DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/HUMAN" FILES_MATCHING PATTERN "*.stl")
install(DIRECTORY pdgains DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/HUMAN" FILES_MATCHING PATTERN "*.dat")
install(DIRECTORY xml DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/HUMAN" FILES_MATCHING PATTERN "*.xml")
